# ros2_beginner

./: README.md  ros2.zsh  switch.zsh
hello_world/: CMakeLists.txt  package.xml
hello_world/msg/: RobotPose.msg  RobotStatus.msg
hello_world/src/: node_01.cpp  publisher.cpp  subscriber.cpp
